# liquid-home

./: .commands  .gitattributes  .gitignore  README.md  main.py  pyproject.toml
data/context/: automation_rules.json
frontend/: app.js  index.html  styles.css
src/api/: server.py
src/ingestion/: frame_store.py  video_stream.py
src/models/: scene_action_detector.py  text_client.py  vlm_client.py
src/pipeline/: frame_analyzer.py  frame_analyzer_2.py  frame_context.py
tests/: vlm_client_test.py
tests/test_vlm/: vlm_client_test.py
