[project]
name = "liquid-home"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub>=0.36.0",
    "llama-cpp-python>=0.3.16",
    "openai>=2.8.0",
    "opencv-python>=4.12.0.88",
    "torch>=2.9.1",
    "transformers>=4.57.1",
]
